# HSI_penguinID

./: .gitignore  README.md  pyproject.toml  visualize_demo.ipynb
dataset/: split_dataset.py  test_dataset_info.json  train_dataset_info.json  validation_dataset_info.json
dataset/MLP_pretrain/: make_dataset.py
dataset/YOLO_pretrain/: make_dataset.py
dataset/YOLO_pretrain/dataset/: penguin_id_yolo.yaml  penguin_id_yolo_single.yaml  train.cache  val.cache
dataset/YOLO_pretrain/dataset_16/: penguin_id_yolo.yaml  penguin_id_yolo_single.yaml  train.cache  val.cache
dataset/YOLO_pretrain/dataset_4/: penguin_id_yolo.yaml  penguin_id_yolo_single.yaml  train.cache  val.cache
dataset/YOLO_pretrain/dataset_8/: penguin_id_yolo.yaml  penguin_id_yolo_single.yaml  train.cache  val.cache
src/: evaluate.py  evaluation_result.json  identification_system.py  main.py  plot_rectangle.py
src/detect/: detector.py
src/detect/hs2rgb/: cfm.csv  gamma.py  hs2rgb.py  tone_curve.py
src/detect/yolov5/models/: common.py  (+1 more)
src/identify/calc_penguin_id/: calc_penguin_id.py
src/identify/crop_patch/: crop_patch.py
src/identify/extract_pixels/: extract_pixels.py
src/identify/pixel_wise_mlp/: hspix_dataset.py  main.py  model_choice.py  model_wrapper.py  pixel_wise_mlp.py  test.py  train.py
src/identify/predict_score/: hspix_dataset.py  model_wrapper.py  predict_score.py  train.py
src/identify/weight_mask/: weight_mask.py
src/result/: evaluation_result.json
src/result/0.25_white/: evaluation_result.json
src/result/full/: evaluation_result.json
src/utils/: plot_rectangle.py
(+156 files in other folders)
